tpcds_saurin/data_gen/y.output
   0  $accept : workload_spec $end

   1  workload_spec : statement_list

   2  statement_list : statement
   3                 | statement_list statement

   4  statement : include_statement
   5            | define_statement
   6            | query_statement
   7            | dist_statement

   8  include_statement : '#' KW_INCLUDE path
   9                    | '#' KW_INCLUDE '<' path '>'

  10  dist_statement : KW_DIST TOK_ID ';' dist_argument_list dist_members_list

  11  dist_argument_list : dist_argument
  12                     | dist_argument_list dist_argument

  13  dist_argument : KW_SET KW_WEIGHTS '=' TOK_INT ';'
  14                | KW_SET KW_TYPES '=' '(' dist_type_list ')' ';'
  15                | KW_SET KW_NAMES '=' '(' dist_name_list ':' dist_name_list ')' ';'

  16  dist_type : KW_INT
  17            | KW_VARCHAR
  18            | KW_DECIMAL

  19  dist_type_list :
  20                 | dist_type
  21                 | dist_type_list ',' dist_type

  22  dist_name_list : TOK_ID
  23                 | dist_name_list ',' TOK_ID

  24  dist_members_list : dist_member
  25                    | dist_members_list dist_member

  26  dist_member : KW_ADD '(' dist_value_list ':' dist_weight_list ')' ';'

  27  dist_value : TOK_INT
  28             | TOK_LITERAL
  29             | TOK_DECIMAL

  30  dist_value_list : dist_value
  31                  | dist_value_list ',' dist_value

  32  dist_weight_list : TOK_INT
  33                   | dist_value_list ',' TOK_INT

  34  define_statement : KW_DEFINE TOK_ID '=' expr ';'
  35                   | KW_DEFINE KW_LIMIT '=' TOK_INT ';'

  36  comma_expr_list : expr
  37                  | comma_expr_list ',' expr

  38  expr : TOK_LITERAL
  39       | TOK_INT
  40       | function_call
  41       | keyword_expr
  42       | '[' keyword_value ']'
  43       | '[' TOK_ID TOK_INT opt_substitution_suffix ']'
  44       | '[' TOK_ID opt_substitution_suffix ']'
  45       | KW_SCALE
  46       | arithmetic_expr

  47  function_call : function_name '(' comma_expr_list ')'
  48                | dist_function_name '(' dist_expr_list ')'
  49                | KW_TEXT '(' replacement_list ')'
  50                | KW_ROWCOUNT '(' TOK_LITERAL ')'
  51                | KW_ROWCOUNT '(' TOK_LITERAL ',' TOK_LITERAL ')'
  52                | KW_SCALE_STEP '(' ')'
  53                | KW_LIST '(' expr ',' TOK_INT ')'
  54                | KW_RANGE '(' expr ',' TOK_INT ')'

  55  arithmetic_expr : expr '+' expr
  56                  | expr '-' expr
  57                  | expr '*' expr
  58                  | expr '/' expr

  59  dist_expr_list : expr
  60                 | TOK_ID
  61                 | dist_expr_list ',' expr
  62                 | dist_expr_list ',' TOK_ID

  63  function_name : KW_DATE
  64                | KW_RANDOM

  65  dist_function_name : KW_DIST
  66                     | KW_DISTMEMBER
  67                     | KW_DISTWEIGHT

  68  keyword_expr : KW_UNIFORM
  69               | KW_SALES
  70               | KW_RETURNS

  71  keyword_value : KW_QUERY
  72                | KW_TEMPLATE
  73                | KW_STREAM

  74  replacement_list : replacement
  75                   | replacement_list ',' replacement

  76  replacement : '{' TOK_LITERAL ',' TOK_INT '}'

  77  query_statement : query_component_list ';'

  78  query_component_list : substitution
  79                       | TOK_SQL
  80                       | query_component_list substitution
  81                       | query_component_list TOK_SQL

  82  substitution : '[' TOK_ID opt_substitution_suffix ']'
  83               | '[' TOK_ID TOK_INT opt_substitution_suffix ']'
  84               | '[' KW_QUERY ']'
  85               | '[' KW_STREAM ']'
  86               | '[' KW_TEMPLATE ']'
  87               | '[' KW_LIMITA ']'
  88               | '[' KW_LIMITB ']'
  89               | '[' KW_LIMITC ']'

  90  opt_substitution_suffix :
  91                          | '.' KW_BEGIN
  92                          | '.' KW_END
  93                          | '.' TOK_INT

  94  path : TOK_LITERAL

state 0
	$accept : . workload_spec $end  (0)

	TOK_SQL  shift 1
	KW_DEFINE  shift 2
	KW_DIST  shift 3
	'['  shift 4
	'#'  shift 5
	.  error

	workload_spec  goto 6
	statement  goto 7
	statement_list  goto 8
	include_statement  goto 9
	define_statement  goto 10
	query_statement  goto 11
	dist_statement  goto 12
	query_component_list  goto 13
	substitution  goto 14


state 1
	query_component_list : TOK_SQL .  (79)

	.  reduce 79


state 2
	define_statement : KW_DEFINE . TOK_ID '=' expr ';'  (34)
	define_statement : KW_DEFINE . KW_LIMIT '=' TOK_INT ';'  (35)

	TOK_ID  shift 15
	KW_LIMIT  shift 16
	.  error


state 3
	dist_statement : KW_DIST . TOK_ID ';' dist_argument_list dist_members_list  (10)

	TOK_ID  shift 17
	.  error


state 4
	substitution : '[' . TOK_ID opt_substitution_suffix ']'  (82)
	substitution : '[' . TOK_ID TOK_INT opt_substitution_suffix ']'  (83)
	substitution : '[' . KW_QUERY ']'  (84)
	substitution : '[' . KW_STREAM ']'  (85)
	substitution : '[' . KW_TEMPLATE ']'  (86)
	substitution : '[' . KW_LIMITA ']'  (87)
	substitution : '[' . KW_LIMITB ']'  (88)
	substitution : '[' . KW_LIMITC ']'  (89)

	TOK_ID  shift 18
	KW_QUERY  shift 19
	KW_STREAM  shift 20
	KW_TEMPLATE  shift 21
	KW_LIMITA  shift 22
	KW_LIMITB  shift 23
	KW_LIMITC  shift 24
	.  error


state 5
	include_statement : '#' . KW_INCLUDE path  (8)
	include_statement : '#' . KW_INCLUDE '<' path '>'  (9)

	KW_INCLUDE  shift 25
	.  error


state 6
	$accept : workload_spec . $end  (0)

	$end  accept


state 7
	statement_list : statement .  (2)

	.  reduce 2


state 8
	workload_spec : statement_list .  (1)
	statement_list : statement_list . statement  (3)

	TOK_SQL  shift 1
	KW_DEFINE  shift 2
	KW_DIST  shift 3
	'['  shift 4
	'#'  shift 5
	$end  reduce 1

	statement  goto 26
	include_statement  goto 9
	define_statement  goto 10
	query_statement  goto 11
	dist_statement  goto 12
	query_component_list  goto 13
	substitution  goto 14


state 9
	statement : include_statement .  (4)

	.  reduce 4


state 10
	statement : define_statement .  (5)

	.  reduce 5


state 11
	statement : query_statement .  (6)

	.  reduce 6


state 12
	statement : dist_statement .  (7)

	.  reduce 7


state 13
	query_statement : query_component_list . ';'  (77)
	query_component_list : query_component_list . substitution  (80)
	query_component_list : query_component_list . TOK_SQL  (81)

	TOK_SQL  shift 27
	'['  shift 4
	';'  shift 28
	.  error

	substitution  goto 29


state 14
	query_component_list : substitution .  (78)

	.  reduce 78


state 15
	define_statement : KW_DEFINE TOK_ID . '=' expr ';'  (34)

	'='  shift 30
	.  error


state 16
	define_statement : KW_DEFINE KW_LIMIT . '=' TOK_INT ';'  (35)

	'='  shift 31
	.  error


state 17
	dist_statement : KW_DIST TOK_ID . ';' dist_argument_list dist_members_list  (10)

	';'  shift 32
	.  error


state 18
	substitution : '[' TOK_ID . opt_substitution_suffix ']'  (82)
	substitution : '[' TOK_ID . TOK_INT opt_substitution_suffix ']'  (83)
	opt_substitution_suffix : .  (90)

	TOK_INT  shift 33
	'.'  shift 34
	']'  reduce 90

	opt_substitution_suffix  goto 35


state 19
	substitution : '[' KW_QUERY . ']'  (84)

	']'  shift 36
	.  error


state 20
	substitution : '[' KW_STREAM . ']'  (85)

	']'  shift 37
	.  error


state 21
	substitution : '[' KW_TEMPLATE . ']'  (86)

	']'  shift 38
	.  error


state 22
	substitution : '[' KW_LIMITA . ']'  (87)

	']'  shift 39
	.  error


state 23
	substitution : '[' KW_LIMITB . ']'  (88)

	']'  shift 40
	.  error


state 24
	substitution : '[' KW_LIMITC . ']'  (89)

	']'  shift 41
	.  error


state 25
	include_statement : '#' KW_INCLUDE . path  (8)
	include_statement : '#' KW_INCLUDE . '<' path '>'  (9)

	TOK_LITERAL  shift 42
	'<'  shift 43
	.  error

	path  goto 44


state 26
	statement_list : statement_list statement .  (3)

	.  reduce 3


state 27
	query_component_list : query_component_list TOK_SQL .  (81)

	.  reduce 81


state 28
	query_statement : query_component_list ';' .  (77)

	.  reduce 77


state 29
	query_component_list : query_component_list substitution .  (80)

	.  reduce 80


state 30
	define_statement : KW_DEFINE TOK_ID '=' . expr ';'  (34)

	TOK_INT  shift 45
	TOK_LITERAL  shift 46
	KW_RANDOM  shift 47
	KW_UNIFORM  shift 48
	KW_RANGE  shift 49
	KW_DATE  shift 50
	KW_TEXT  shift 51
	KW_DIST  shift 52
	KW_LIST  shift 53
	KW_ROWCOUNT  shift 54
	KW_SALES  shift 55
	KW_RETURNS  shift 56
	KW_DISTMEMBER  shift 57
	KW_DISTWEIGHT  shift 58
	KW_SCALE  shift 59
	KW_SCALE_STEP  shift 60
	'['  shift 61
	.  error

	expr  goto 62
	function_call  goto 63
	arithmetic_expr  goto 64
	dist_function_name  goto 65
	function_name  goto 66
	keyword_expr  goto 67


state 31
	define_statement : KW_DEFINE KW_LIMIT '=' . TOK_INT ';'  (35)

	TOK_INT  shift 68
	.  error


state 32
	dist_statement : KW_DIST TOK_ID ';' . dist_argument_list dist_members_list  (10)

	KW_SET  shift 69
	.  error

	dist_argument_list  goto 70
	dist_argument  goto 71


state 33
	substitution : '[' TOK_ID TOK_INT . opt_substitution_suffix ']'  (83)
	opt_substitution_suffix : .  (90)

	'.'  shift 34
	']'  reduce 90

	opt_substitution_suffix  goto 72


state 34
	opt_substitution_suffix : '.' . KW_BEGIN  (91)
	opt_substitution_suffix : '.' . KW_END  (92)
	opt_substitution_suffix : '.' . TOK_INT  (93)

	TOK_INT  shift 73
	KW_BEGIN  shift 74
	KW_END  shift 75
	.  error


state 35
	substitution : '[' TOK_ID opt_substitution_suffix . ']'  (82)

	']'  shift 76
	.  error


state 36
	substitution : '[' KW_QUERY ']' .  (84)

	.  reduce 84


state 37
	substitution : '[' KW_STREAM ']' .  (85)

	.  reduce 85


state 38
	substitution : '[' KW_TEMPLATE ']' .  (86)

	.  reduce 86


state 39
	substitution : '[' KW_LIMITA ']' .  (87)

	.  reduce 87


state 40
	substitution : '[' KW_LIMITB ']' .  (88)

	.  reduce 88


state 41
	substitution : '[' KW_LIMITC ']' .  (89)

	.  reduce 89


state 42
	path : TOK_LITERAL .  (94)

	.  reduce 94


state 43
	include_statement : '#' KW_INCLUDE '<' . path '>'  (9)

	TOK_LITERAL  shift 42
	.  error

	path  goto 77


state 44
	include_statement : '#' KW_INCLUDE path .  (8)

	.  reduce 8


state 45
	expr : TOK_INT .  (39)

	.  reduce 39


state 46
	expr : TOK_LITERAL .  (38)

	.  reduce 38


state 47
	function_name : KW_RANDOM .  (64)

	.  reduce 64


state 48
	keyword_expr : KW_UNIFORM .  (68)

	.  reduce 68


state 49
	function_call : KW_RANGE . '(' expr ',' TOK_INT ')'  (54)

	'('  shift 78
	.  error


state 50
	function_name : KW_DATE .  (63)

	.  reduce 63


state 51
	function_call : KW_TEXT . '(' replacement_list ')'  (49)

	'('  shift 79
	.  error


state 52
	dist_function_name : KW_DIST .  (65)

	.  reduce 65


state 53
	function_call : KW_LIST . '(' expr ',' TOK_INT ')'  (53)

	'('  shift 80
	.  error


state 54
	function_call : KW_ROWCOUNT . '(' TOK_LITERAL ')'  (50)
	function_call : KW_ROWCOUNT . '(' TOK_LITERAL ',' TOK_LITERAL ')'  (51)

	'('  shift 81
	.  error


state 55
	keyword_expr : KW_SALES .  (69)

	.  reduce 69


state 56
	keyword_expr : KW_RETURNS .  (70)

	.  reduce 70


state 57
	dist_function_name : KW_DISTMEMBER .  (66)

	.  reduce 66


state 58
	dist_function_name : KW_DISTWEIGHT .  (67)

	.  reduce 67


state 59
	expr : KW_SCALE .  (45)

	.  reduce 45


state 60
	function_call : KW_SCALE_STEP . '(' ')'  (52)

	'('  shift 82
	.  error


state 61
	expr : '[' . keyword_value ']'  (42)
	expr : '[' . TOK_ID TOK_INT opt_substitution_suffix ']'  (43)
	expr : '[' . TOK_ID opt_substitution_suffix ']'  (44)

	TOK_ID  shift 83
	KW_QUERY  shift 84
	KW_STREAM  shift 85
	KW_TEMPLATE  shift 86
	.  error

	keyword_value  goto 87


state 62
	define_statement : KW_DEFINE TOK_ID '=' expr . ';'  (34)
	arithmetic_expr : expr . '+' expr  (55)
	arithmetic_expr : expr . '-' expr  (56)
	arithmetic_expr : expr . '*' expr  (57)
	arithmetic_expr : expr . '/' expr  (58)

	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	';'  shift 92
	.  error


state 63
	expr : function_call .  (40)

	.  reduce 40


state 64
	expr : arithmetic_expr .  (46)

	.  reduce 46


state 65
	function_call : dist_function_name . '(' dist_expr_list ')'  (48)

	'('  shift 93
	.  error


state 66
	function_call : function_name . '(' comma_expr_list ')'  (47)

	'('  shift 94
	.  error


state 67
	expr : keyword_expr .  (41)

	.  reduce 41


state 68
	define_statement : KW_DEFINE KW_LIMIT '=' TOK_INT . ';'  (35)

	';'  shift 95
	.  error


state 69
	dist_argument : KW_SET . KW_WEIGHTS '=' TOK_INT ';'  (13)
	dist_argument : KW_SET . KW_TYPES '=' '(' dist_type_list ')' ';'  (14)
	dist_argument : KW_SET . KW_NAMES '=' '(' dist_name_list ':' dist_name_list ')' ';'  (15)

	KW_NAMES  shift 96
	KW_TYPES  shift 97
	KW_WEIGHTS  shift 98
	.  error


state 70
	dist_statement : KW_DIST TOK_ID ';' dist_argument_list . dist_members_list  (10)
	dist_argument_list : dist_argument_list . dist_argument  (12)

	KW_SET  shift 69
	KW_ADD  shift 99
	.  error

	dist_members_list  goto 100
	dist_argument  goto 101
	dist_member  goto 102


state 71
	dist_argument_list : dist_argument .  (11)

	.  reduce 11


state 72
	substitution : '[' TOK_ID TOK_INT opt_substitution_suffix . ']'  (83)

	']'  shift 103
	.  error


state 73
	opt_substitution_suffix : '.' TOK_INT .  (93)

	.  reduce 93


state 74
	opt_substitution_suffix : '.' KW_BEGIN .  (91)

	.  reduce 91


state 75
	opt_substitution_suffix : '.' KW_END .  (92)

	.  reduce 92


state 76
	substitution : '[' TOK_ID opt_substitution_suffix ']' .  (82)

	.  reduce 82


state 77
	include_statement : '#' KW_INCLUDE '<' path . '>'  (9)

	'>'  shift 104
	.  error


state 78
	function_call : KW_RANGE '(' . expr ',' TOK_INT ')'  (54)

	TOK_INT  shift 45
	TOK_LITERAL  shift 46
	KW_RANDOM  shift 47
	KW_UNIFORM  shift 48
	KW_RANGE  shift 49
	KW_DATE  shift 50
	KW_TEXT  shift 51
	KW_DIST  shift 52
	KW_LIST  shift 53
	KW_ROWCOUNT  shift 54
	KW_SALES  shift 55
	KW_RETURNS  shift 56
	KW_DISTMEMBER  shift 57
	KW_DISTWEIGHT  shift 58
	KW_SCALE  shift 59
	KW_SCALE_STEP  shift 60
	'['  shift 61
	.  error

	expr  goto 105
	function_call  goto 63
	arithmetic_expr  goto 64
	dist_function_name  goto 65
	function_name  goto 66
	keyword_expr  goto 67


state 79
	function_call : KW_TEXT '(' . replacement_list ')'  (49)

	'{'  shift 106
	.  error

	replacement  goto 107
	replacement_list  goto 108


state 80
	function_call : KW_LIST '(' . expr ',' TOK_INT ')'  (53)

	TOK_INT  shift 45
	TOK_LITERAL  shift 46
	KW_RANDOM  shift 47
	KW_UNIFORM  shift 48
	KW_RANGE  shift 49
	KW_DATE  shift 50
	KW_TEXT  shift 51
	KW_DIST  shift 52
	KW_LIST  shift 53
	KW_ROWCOUNT  shift 54
	KW_SALES  shift 55
	KW_RETURNS  shift 56
	KW_DISTMEMBER  shift 57
	KW_DISTWEIGHT  shift 58
	KW_SCALE  shift 59
	KW_SCALE_STEP  shift 60
	'['  shift 61
	.  error

	expr  goto 109
	function_call  goto 63
	arithmetic_expr  goto 64
	dist_function_name  goto 65
	function_name  goto 66
	keyword_expr  goto 67


state 81
	function_call : KW_ROWCOUNT '(' . TOK_LITERAL ')'  (50)
	function_call : KW_ROWCOUNT '(' . TOK_LITERAL ',' TOK_LITERAL ')'  (51)

	TOK_LITERAL  shift 110
	.  error


state 82
	function_call : KW_SCALE_STEP '(' . ')'  (52)

	')'  shift 111
	.  error

